--- a/edge-device-kepler/kepler-exporter-ds.yaml
+++ b/edge-device-kepler/kepler-exporter-ds.yaml
@@ -30,7 +30,6 @@ spec:
       securityContext: {}
       containers:
         - resources: {}
-          terminationMessagePath: /dev/termination-log
           name: kepler-exporter
           command:
             - /usr/bin/kepler
@@ -39,8 +38,6 @@ spec:
             - '-enable-cgroup-id=true'
             - '-enable-gpu=$(ENABLE_GPU)'
             - '-v=$(KEPLER_LOG_LEVEL)'
-            - '-kernel-source-dir=/usr/share/kepler/kernel_sources'
-            - '-redfish-cred-file-path=/etc/redfish/redfish.csv'
           livenessProbe:
             httpGet:
               path: /healthz
@@ -96,7 +93,7 @@ spec:
             - name: cfm
               mountPath: /etc/kepler/kepler.config
           terminationMessagePolicy: File
-          image: 'quay.io/sustainable_computing_io/kepler:release-0.7.3'
+          image: 'quay.io/sustainable_computing_io/kepler:latest'
       serviceAccount: kepler-exporter-sa
       volumes:
         - name: lib-modules
