--- a/edge-device-opentelemetry-collector/collector-configmap-otelconfig.yaml
+++ b/edge-device-opentelemetry-collector/collector-configmap-otelconfig.yaml
@@ -11,11 +11,21 @@ data:
   collector.yaml: |
     receivers:
 
+      prometheus/kepler-powerlevel:
+        config:
+          scrape_configs:
+            - job_name: 'kepler'
+              scrape_interval: 2s
+              static_configs:
+                - targets: 
+                    - ${env:K8S_NODE_IP}:9102
+                  labels: 
+                    exported_instance: ${env:K8S_NODE_NAME}
 
       kubeletstats/node:
         auth_type: serviceAccount
         collection_interval: 5s
-        endpoint: https://<MICROSHIFT_IP_ADDRESS>:10250
+        endpoint: https://${env:K8S_NODE_IP}:10250
         initial_delay: 1s
         insecure_skip_verify: true
         metric_groups:
@@ -26,12 +36,10 @@ data:
           k8s.node.cpu.utilization:
             enabled: false
 
-
-
       kubeletstats/pod:
         auth_type: serviceAccount
         collection_interval: 5s
-        endpoint: https://<MICROSHIFT_IP_ADDRESS>:10250
+        endpoint: https://${env:K8S_NODE_IP}:10250
         initial_delay: 1s
         insecure_skip_verify: true
         metric_groups:
@@ -42,7 +50,6 @@ data:
           k8s.pod.cpu.utilization:
             enabled: false
 
-
       otlp:
         protocols:
           grpc:
@@ -50,35 +57,75 @@ data:
           http:
             endpoint: 0.0.0.0:4318
 
-            
     processors:
-      batch:
-        send_batch_max_size: 5000
-        send_batch_size: 5000
-      
+      batch: null
+
+      filter/pod-powerlevel:
+        metrics:
+          include:
+            match_type: strict
+            metric_names:
+              - kepler_container_joules_total
+              - kepler_container_other_joules_total
+              - kepler_container_platform_joules_total
+              - kepler_container_package_joules_total
+              - kepler_container_core_joules_total
+              - kepler_container_dram_joules_total
+              - kepler_container_gpu_joules_total
+              - kepler_node_info
+      filter/node-powerlevel:
+        metrics:
+          include:
+            match_type: strict
+            metric_names:
+              - kepler_node_core_joules_total
+              - kepler_node_other_joules_total
+              - kepler_node_package_joules_total
+              - kepler_node_platform_joules_total
+              - kepler_node_uncore_joules_total
+              - kepler_node_dram_joules_total
+              - kepler_node_gpu_joules_total
+              - kepler_node_info
+
       resource/nodename-insert:
         attributes:
          - action: insert
            key: k8s.node.name
-           value: ${K8S_NODE_NAME}          
+           value: ${K8S_NODE_NAME}
 
       resource/nodestats:
         attributes:
          - action: insert
-           key: metrics.kubelet.stats
+           key: metrics.stats
            value: node
 
       resource/podstats:
         attributes:
          - action: insert
-           key: metrics.kubelet.stats
+           key: metrics.stats
            value: pod
+
+      resource/pod-powerlevel-stats:
+        attributes:
+         - action: insert
+           key: metrics.stats
+           value: pod-powerlevel
+
+      resource/node-powerlevel-stats:
+        attributes:
+         - action: insert
+           key: metrics.stats
+           value: node-powerlevel
 
       resource/clusterinfo:
         attributes:
          - action: insert
-           key: k8s-ocp.cluster.type
-           value: rhel-edge-microshift
+           key: k8s.cluster.type
+           value: edge-microshift
+         - action: insert
+           key: k8s.cluster.name
+           value: ${K8S_NODE_NAME}
+
 
       resourcedetection/openshift:
         detectors:
@@ -87,12 +134,8 @@ data:
     exporters:
       debug:
         verbosity: detailed
-      otlp/node-stats:
-        endpoint: http://<REMOTE_OTEL_COLLECTOR>:4317
-        tls:
-         insecure: true  
-      otlp/pod-stats:
-        endpoint: http://<REMOTE_OTEL_COLLECTOR>:4317
+      otlp/microshift-metrics:
+        endpoint: http://192.168.31.109:4317
         tls:
          insecure: true
 
@@ -109,7 +152,7 @@ data:
       
       k8s_observer:
         auth_type: serviceAccount
-        node: ${K8S_NODE_NAME}
+        node: ${K8S_NODE_IP}
         observe_nodes: true
         observe_pods: true
 
@@ -123,27 +166,53 @@ data:
         metrics:
           address: :8888
       pipelines:
+
         metrics/kubelet-node:
           exporters:
             - debug
-            - otlp/node-stats
+            - otlp/microshift-metrics
           processors:
-            - batch
             - resource/clusterinfo
             - resource/nodename-insert
             - resource/nodestats
             - resourcedetection/openshift
           receivers:
             - kubeletstats/node
+
         metrics/kubelet-pod:
           exporters:
             - debug
-            - otlp/pod-stats
+            - otlp/microshift-metrics
           processors:
-            - batch
             - resource/clusterinfo
             - resource/podstats
             - resource/nodename-insert
             - resourcedetection/openshift
           receivers:
             - kubeletstats/pod
+
+        metrics/powerlevel-podstats:
+          exporters:
+            - debug
+            - otlp/microshift-metrics
+          processors:
+            - resource/clusterinfo
+            - resource/pod-powerlevel-stats
+            - resource/nodename-insert
+            - resourcedetection/openshift
+            - filter/pod-powerlevel
+          receivers:
+            - prometheus/kepler-powerlevel
+
+        metrics/powerlevel-nodestats:
+          exporters:
+            - debug
+            - otlp/microshift-metrics
+          processors:
+            - resource/clusterinfo
+            - resource/node-powerlevel-stats
+            - resource/nodename-insert
+            - resourcedetection/openshift
+            - filter/node-powerlevel
+          receivers:
+            - prometheus/kepler-powerlevel
