--- a/edge-device-opentelemetry-collector/collector-rolebinding.yaml
+++ b/edge-device-opentelemetry-collector/collector-rolebinding.yaml
@@ -10,7 +10,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: infra-telemetry-collector
-    namespace: itap-expo
+    namespace: otel
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
