--- a/03-edge-device-opentelemetry-collector/otel-collector-gitops/helm/templates/04-clusterrolebinding.yaml
+++ b/03-edge-device-opentelemetry-collector/otel-collector-gitops/helm/templates/04-clusterrolebinding.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.namespace.name }}
 
-{{- if and .Values.rbac.enabled .Values.rbac.roleBinding.create -}}
+{{- if and .Values.rbac.enabled .Values.rbac.clusterRoleBinding.create -}}
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
