--- a/05-ocp-resources/01-kafka/kafka-cluster/kafka.yaml
+++ b/05-ocp-resources/01-kafka/kafka-cluster/kafka.yaml
@@ -15,13 +15,12 @@ spec:
     userOperator: {}
   kafka:
     config:
-      auto.create.topics.enable: false
-      default.replication.factor: 5
-      delete.topic.enable: true
-      min.insync.replicas: 4
-      offsets.topic.replication.factor: 5
-      transaction.state.log.min.isr: 4
-      transaction.state.log.replication.factor: 5
+      auto.create.topics.enable: true
+      default.replication.factor: 3
+      min.insync.replicas: 2
+      offsets.topic.replication.factor: 2
+      transaction.state.log.min.isr: 2
+      transaction.state.log.replication.factor: 2
     listeners:
       - name: plain
         port: 9092
@@ -31,26 +30,14 @@ spec:
         port: 9093
         tls: true
         type: route
-    replicas: 5
-    resources:
-      limits:
-        cpu: 850m
-        memory: 1280Mi
-      requests:
-        cpu: 800m
-        memory: 1200Mi
+    replicas: 3
+    resources: {}
     storage:
       size: 50Gi
       type: persistent-claim
   zookeeper:
-    replicas: 3
-    resources:
-      limits:
-        cpu: 550m
-        memory: 850Mi
-      requests:
-        cpu: 500m
-        memory: 800Mi
+    replicas: 1
+    resources: {}
     storage:
       size: 5Gi
       type: persistent-claim
