Added testcases helm charts

--- a/05-ocp-resources/01-kafka/kafka-cluster/kafka.yaml
+++ b/05-ocp-resources/01-kafka/kafka-cluster/kafka.yaml
@@ -15,7 +15,8 @@ spec:
     userOperator: {}
   kafka:
     config:
-      auto.create.topics.enable: true
+      # auto.create.topics.enable: false
+      # delete.topic.enable: false
       default.replication.factor: 3
       min.insync.replicas: 2
       offsets.topic.replication.factor: 2
